# glTFVariantMeld

./: .gitignore  .travis.yml  BUILDING.md  CONTRIBUTING.md  Cargo.toml  README.md  build-wasm-pkg.sh  variationator.code-workspace
.circleci/: config.yml
.github/workflows/: release.yml  rust.yml  smoke.yml
assets/pinecones/matte/: Pinecone.gltf
assets/pinecones/shiny/: Pinecone.gltf
assets/pinecones/tinted/: Pinecone.gltf
assets/pinecones/variational/: Pinecone.gltf
assets/tank_teapots/: TexturedTankTeapot-export.gltf  teapot-camo-pink-bronze.gltf  teapot-camo-pink-silver.gltf  teapot-green-pink-bronze.gltf  teapot-green-pink-silver.gltf
native/: Cargo.toml  build-wasm-pkg.sh
native/assets/: Cargo.toml
native/assets/src/: lib.rs
native/src/: glb.rs  gltfext.rs  lib.rs
native/src/extension/: mod.rs  on_primitive.rs  on_root.rs
native/src/meld_keys/: fingerprints.rs  key_trait.rs  mod.rs
native/src/variational_asset/: metadata.rs  mod.rs  wasm.rs
native/src/work_asset/: construct.rs  export.rs  meld.rs  mod.rs
native/tests/: basic_parse_tests.rs  meld_tests.rs  variational_asset_tests.rs
web/cli/: build-node-app.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/cli/src/: index.ts  wasmpkg.ts
