[package]
name = "gltf_variant_meld"
version = "0.1.0"
description = "Meld multiple asset variants into one, using extended glTF."
authors = [
	"Pär Winzell <zell@fb.com>",
	"Renee Rashid",
]
repository = "https://github.com/facebookincubator/glTFVariantMeld/"
license = "MIT"
edition = "2018"
publish = false

[lib]
name="gltf_variant_meld"
crate-type = ["lib", "cdylib"]

[dependencies.assets]
path = "./assets"

[dependencies.spectral]
version = "^0.6"
default-features=false

[dependencies.wasm-bindgen]
version = "^0.2"

[dependencies.gltf]
version = "^0.13"
git = "https://github.com/zellski/gltf-rs"
branch = "for-gltf-variant-meld"
features = ["extras", "names"]

[dependencies.serde]
version = "^1.0"

[dependencies.serde_derive]
version = "^1.0"

[dependencies.serde_json]
version = "^1.0"
features = ["raw_value"]

[dependencies.sha1]
version = "^0.6"
